--- a/origin/starter/index.html
+++ b/origin/starter/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Resume/CV Design</title>
-  <link rel="stylesheet" href="/origin/starter/style.css">
+  <link rel="stylesheet" href="/starter/style.css">
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
 <body>
