--- a/origin/starter/index.html
+++ b/origin/starter/index.html
@@ -10,7 +10,7 @@
 <div class="resume">
    <div class="resume_left">
      <a href="https://www.searchpng.com/">
-         <img src="/origin/starter/image/img.jpg" 
+         <img src="/starter/image/img.jpg" 
          width="300" height="300" >
       </a>
      <div class="resume_profile">
