--- a/origin/starter/index.html
+++ b/origin/starter/index.html
@@ -3,16 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Resume/CV Design</title>
-  <link rel="stylesheet" href="/starter/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </head>
 <body>
 <div class="resume">
    <div class="resume_left">
-     <a href="https://www.searchpng.com/">
-         <img src="/starter/image/img.jpg" 
+         <img src="https://lh3.googleusercontent.com/sQrJKo8rMwmGsb3-2qtZOe6jDC3Wfe89W_dSV1BDL0ToFcwIFDwmDbJJmMgoUs7mWma5byx6IvwaZUlSlp7l-wlYExcvBPXIjGrWHZRPQ-s0JaYyVNVEAJI220LBX4uVSXlb07aER0t0z6R3cb44-TUbSxAWk_Kf1BgfPZ_uNBg4dJACvunnuKORHX_5Et1QITvyBctpMkmRTrs01g4VKYnUZs89r6Wvlx-Q_isb2kEUx3MExL47E7DIflTREManN7dOWQn9SP8oUgCaFTAPCMfDndcQxmkiExtMUxPVneQXHyNQVEjI1HPdUjDNUMPeavY1kpPVtSOb6BXEH8_yZDiy085QQmsABI5UoT-F10erZC8dNhcKK3oX2iBxzMR_6LReJNJ5FR9-8y5VFQstsn7Rzz0OC-c5dsyGN4GsJNDvutEIcyI62pQt4XtkmlTHWWUMZzRvd6IFdJwUMZCYj6bKtN8bUhnF8WXJtcaFws5Fsf7KoczgDXDwpd53Fbb38NG_Klq024V9kvJCOFVIVdIho-_CjsnZwzyHdas6B9KcMcg65-bL0vj_dXGn5GILDFtY8OPj5kZfC-VGLorozqgd-pADz7ZUQwu1BIPM-Hv3EWCcDw2GQMiBarNw06ffIdRBWwwbU4zZJncayjkkCZGdPauaaE4AfdNfyxuU9CGd9mMmH_GF_7HaliDCEw=w130-h168-no?authuser=0" 
          width="300" height="300" >
-      </a>
      <div class="resume_profile">
      </div>
      <div class="resume_content">
